force-app/main/default/objects/Business_Assessment__c/Business_Assessment__c.object-meta.xml
<CustomObject>
    <label>Business Assessment</label>
    <nameField>
        <displayFormat>BA{0000000}</displayFormat>
        <label>Business Assessment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Assessments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>