force-app/main/default/objects/Business_Assessment__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The name of the group parent client who the business assessment is applicable for</description>
    <inlineHelpText>Group Parent Client that the business assessment is applicable for</inlineHelpText>
    <label>Group Parent Client Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Business Assessments</relationshipLabel>
    <relationshipName>Business_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>