force-app/main/default/objects/Business_Assessment__c/fields/Additional_Strategic_Rationale__c.field-meta.xml
<CustomField>
    <fullName>Additional_Strategic_Rationale__c</fullName>
    <description>Detailed strategic rationale for the transaction including details of how this delivers into the overall client service plan.

            For Type 2 and 4 transactions only, the 1-page Annexure may be used to provide additional information on the client strategy.  Additional information or submissions exceeding the 1 page will not be accepted.</description>
    <inlineHelpText>Max Characters: 3500</inlineHelpText>
    <label>Additional Strategic Rationale</label>
    <length>3500</length>
    <type>Html</type>
</CustomField>