force-app/main/default/objects/Business_Assessment__c/fields/Additional_Transaction_Description__c.field-meta.xml
<CustomField>
    <fullName>Additional_Transaction_Description__c</fullName>
    <description>Detailed description of the transaction being contemplated.

            For Type 3 and 4 transactions only, the 1-page Annexure may be used to provide additional information associated with the risk and complexity of the transaction.  Additional information or submissions exceeding the 1 page will not be accepted.</description>
    <inlineHelpText>Max Characters: 3500</inlineHelpText>
    <label>Additional Transaction Description</label>
    <length>3500</length>
    <type>Html</type>
</CustomField>