force-app/main/default/objects/Business_Assessment__c/fields/Advisor__c.field-meta.xml
<CustomField>
    <fullName>Advisor__c</fullName>
    <description>Advisor to the Client on the transaction.</description>
    <inlineHelpText>Leader of the deal from the Lenders side. If applicable, and not selected at this stage, please suggest a best guess.</inlineHelpText>
    <label>Advisor</label>
    <type>TextArea</type>
</CustomField>