force-app/main/default/objects/Business_Assessment__c/fields/All_opps_part_of_the_client_budget__c.field-meta.xml
<CustomField>
    <fullName>All_opps_part_of_the_client_budget__c</fullName>
    <formula>IF(Opportunities_out_of_budget__c &gt; 0, &apos;No&apos;, &apos;Yes&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>All opps part of the client budget?</label>
    <type>Text</type>
</CustomField>