force-app/main/default/objects/Business_Assessment__c/fields/Amount_Held__c.field-meta.xml
<CustomField>
    <fullName>Amount_Held__c</fullName>
    <description>The amount to be held by the bank, typically agreed with Risk ahead of submission of the NBAC paper.</description>
    <inlineHelpText>The amount to be held by the bank, typically agreed with Risk ahead of submission of the NBAC paper.</inlineHelpText>
    <label>Amount Held</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>