force-app/main/default/objects/Business_Assessment__c/fields/Anticipated_Ancillary_Business_IB__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Ancillary_Business_IB__c</fullName>
    <description>Future/Potential Opportunities with the Client. Please include all Pipeline deals.</description>
    <inlineHelpText>Future/Potential Opportunities with the Client. Please include all Pipeline deals.</inlineHelpText>
    <label>Anticipated Ancillary Business for IB</label>
    <type>TextArea</type>
</CustomField>