force-app/main/default/objects/Business_Assessment__c/fields/Approval_Milestone_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Milestone_Date__c</fullName>
    <label>Approval Milestone Date</label>
    <type>DateTime</type>
</CustomField>