force-app/main/default/objects/Business_Assessment__c/fields/Bank_Role__c.field-meta.xml
<CustomField>
    <fullName>Bank_Role__c</fullName>
    <description>[SFP-6318] - The role the bank plays in the transaction. Value copied from first Loan Product on the associated opportunities.</description>
    <inlineHelpText>The role the bank plays in the transaction.</inlineHelpText>
    <label>Bank Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Bank_Role</valueSetName>
    </valueSet>
</CustomField>