force-app/main/default/objects/Business_Assessment__c/fields/BEE_Client__c.field-meta.xml
<CustomField>
    <fullName>BEE_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if related client is flagged as BEE. This is technical field used to set up criteria based sharing rules.</description>
    <label>BEE Client</label>
    <type>Checkbox</type>
</CustomField>