force-app/main/default/objects/Business_Assessment__c/fields/Booking_Countries__c.field-meta.xml
<CustomField>
    <fullName>Booking_Countries__c</fullName>
    <description>The country in which Standard Bank Legal Entity to which the included opportunities are being booked against</description>
    <inlineHelpText>The country in which Standard Bank Legal Entity to which the included opportunities are being booked against</inlineHelpText>
    <label>Booking Country/ies</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Angola</fullName>
            </value>
            <value>
                <fullName>Botswana</fullName>
            </value>
            <value>
                <fullName>Brazil</fullName>
            </value>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>Côte d&apos;Ivoire</fullName>
            </value>
            <value>
                <fullName>D R Congo</fullName>
            </value>
            <value>
                <fullName>Ghana</fullName>
            </value>
            <value>
                <fullName>Hong Kong</fullName>
            </value>
            <value>
                <fullName>Isle of Man</fullName>
            </value>
            <value>
                <fullName>Jersey</fullName>
            </value>
            <value>
                <fullName>Kenya</fullName>
            </value>
            <value>
                <fullName>Lesotho</fullName>
            </value>
            <value>
                <fullName>Malawi</fullName>
            </value>
            <value>
                <fullName>Mauritius</fullName>
            </value>
            <value>
                <fullName>Mozambique</fullName>
            </value>
            <value>
                <fullName>Namibia</fullName>
            </value>
            <value>
                <fullName>Nigeria</fullName>
            </value>
            <value>
                <fullName>Singapore</fullName>
            </value>
            <value>
                <fullName>South Africa</fullName>
            </value>
            <value>
                <fullName>Swaziland</fullName>
            </value>
            <value>
                <fullName>Tanzania</fullName>
            </value>
            <value>
                <fullName>Uganda</fullName>
            </value>
            <value>
                <fullName>United Kingdom</fullName>
            </value>
            <value>
                <fullName>United States of America</fullName>
            </value>
            <value>
                <fullName>Zambia</fullName>
            </value>
            <value>
                <fullName>Zimbabwe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>