force-app/main/default/objects/Business_Assessment__c/fields/Business_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Business_Sponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The sponsor within the business who supports the transaction/s for the Client</description>
    <inlineHelpText>The sponsor within the business who supports the transaction/s for the Client</inlineHelpText>
    <label>Business Sponsor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Business_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>