force-app/main/default/objects/Business_Assessment__c/fields/Client_Coordinator_BM_Email__c.field-meta.xml
<CustomField>
    <fullName>Client_Coordinator_BM_Email__c</fullName>
    <label>Client Coordinator BM Email</label>
    <type>Email</type>
</CustomField>