force-app/main/default/objects/Business_Assessment__c/fields/Client_Country_of_Risk__c.field-meta.xml
<CustomField>
    <fullName>Client_Country_of_Risk__c</fullName>
    <description>US-3690 The country that the Client has the most credit risk exposure</description>
    <formula>TEXT(Account__r.Country_Risk__c)</formula>
    <inlineHelpText>Client&apos;s specific country of risk exposure</inlineHelpText>
    <label>Client Country of Risk</label>
    <type>Text</type>
</CustomField>