force-app/main/default/objects/Business_Assessment__c/fields/Client_Gearing_PostTransaction__c.field-meta.xml
<CustomField>
    <fullName>Client_Gearing_PostTransaction__c</fullName>
    <label>Client Gearing Post-Transaction</label>
    <length>32</length>
    <type>Text</type>
</CustomField>