force-app/main/default/objects/Business_Assessment__c/fields/Client_Gearing_PreTransaction__c.field-meta.xml
<CustomField>
    <fullName>Client_Gearing_PreTransaction__c</fullName>
    <label>Client Gearing Pre-Transaction</label>
    <length>32</length>
    <type>Text</type>
</CustomField>