force-app/main/default/objects/Business_Assessment__c/fields/Client_LGD__c.field-meta.xml
<CustomField>
    <fullName>Client_LGD__c</fullName>
    <label>Client LGD (%)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>