force-app/main/default/objects/Business_Assessment__c/fields/Client_Rating__c.field-meta.xml
<CustomField>
    <fullName>Client_Rating__c</fullName>
    <description>US-3690 Client Rating Picklist with Risk ratings Client Detail (Left)	Standard Bank Internal Risk Rating for the Economic Group Parent Client from Credit Risk Standard Bank Internal Risk Rating for the Economic Group Parent Client from Credit Risk (Source: CRS)</description>
    <inlineHelpText>Standard Bank Internal Risk Rating for the Economic Group Parent Client from Credit Risk</inlineHelpText>
    <label>Client Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rating</valueSetName>
    </valueSet>
</CustomField>