force-app/main/default/objects/Business_Assessment__c/fields/Client_Risk__c.field-meta.xml
<CustomField>
    <fullName>Client_Risk__c</fullName>
    <description>Measurement rating of the client&apos;s ability to manage E&amp;S risks, based on the client&apos;s commitment, capacity and track record in relation to E&amp;S issues. Sourced from completion of the CRA (client risk assessment) in the E&amp;S screening tool.</description>
    <inlineHelpText>Measurement rating of the client&apos;s ability to manage E&amp;S risks, based on the client&apos;s commitment, capacity and track record in relation to E&amp;S issues. Sourced from completion of the CRA (client risk assessment) in the E&amp;S screening tool.</inlineHelpText>
    <label>Client Risk</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>