force-app/main/default/objects/Business_Assessment__c/fields/Client_Sector__c.field-meta.xml
<CustomField>
    <fullName>Client_Sector__c</fullName>
    <description>US-3690 The Primary sector in which the Economic Group Parent operates. This field is used in CRT and MI reporting</description>
    <inlineHelpText>The sub-sector further defines the sector in which the Economic Group Parent Client operates</inlineHelpText>
    <label>Client Sector</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Consumer</fullName>
            </value>
            <value>
                <fullName>Financial Institutions</fullName>
            </value>
            <value>
                <fullName>Industrials</fullName>
            </value>
            <value>
                <fullName>Internal/Grouped</fullName>
            </value>
            <value>
                <fullName>Mining and Metals</fullName>
            </value>
            <value>
                <fullName>Oil and Gas</fullName>
            </value>
            <value>
                <fullName>Power and Infrastructure</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Sovereign/Public Sector</fullName>
            </value>
            <value>
                <fullName>Telecoms and Media</fullName>
            </value>
            <value>
                <fullName>Unknown Sector</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>