force-app/main/default/objects/Business_Assessment__c/fields/Completed_Annexure_Description__c.field-meta.xml
<CustomField>
    <fullName>Completed_Annexure_Description__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completed Annexure Description</label>
    <type>Checkbox</type>
</CustomField>