force-app/main/default/objects/Business_Assessment__c/fields/Completed_Annexure_Rationale__c.field-meta.xml
<CustomField>
    <fullName>Completed_Annexure_Rationale__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completed Annexure Rationale</label>
    <type>Checkbox</type>
</CustomField>