force-app/main/default/objects/Business_Assessment__c/fields/Completed_Business_and_SOW__c.field-meta.xml
<CustomField>
    <fullName>Completed_Business_and_SOW__c</fullName>
    <formula>NOT( OR(ISBLANK( GM_Share_of_Wallet_Existing_Total__c ) ,  ISBLANK( GM_Share_of_Wallet_Existing_SBG__c ) ,  ISBLANK( IB_Share_of_Wallet_Existing_Total__c ) ,  ISBLANK( IB_Share_of_Wallet_Existing_SBG__c ) ,  ISBLANK( TPS_Share_of_Wallet_Existing_Total__c ) ,  ISBLANK( TPS_Share_of_Wallet_Existing_SBG__c ) ,  ISBLANK( Anticipated_Ancillary_Business_GM__c ) ,  ISBLANK( Anticipated_Ancillary_Business_IB__c ) ,  ISBLANK( Anticipated_Ancillary_Business_TPS__c )))</formula>
    <label>Completed Business and SOW</label>
    <type>Checkbox</type>
</CustomField>