force-app/main/default/objects/Business_Assessment__c/fields/Completed_Client_Details_New__c.field-meta.xml
<CustomField>
    <fullName>Completed_Client_Details_New__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-4492 -- Field used for refactored nbac validation</description>
    <label>Completed Client Details</label>
    <type>Checkbox</type>
</CustomField>