force-app/main/default/objects/Business_Assessment__c/fields/Completed_Compliance__c.field-meta.xml
<CustomField>
    <fullName>Completed_Compliance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completed Compliance</label>
    <type>Checkbox</type>
</CustomField>