force-app/main/default/objects/Business_Assessment__c/fields/Completed_Distribution_And_RiskMan__c.field-meta.xml
<CustomField>
    <fullName>Completed_Distribution_And_RiskMan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completed Distribution And RiskMan</label>
    <type>Checkbox</type>
</CustomField>