force-app/main/default/objects/Business_Assessment__c/fields/Completed_Environmental_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Completed_Environmental_Assessment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completed Environmental Assessment</label>
    <type>Checkbox</type>
</CustomField>