force-app/main/default/objects/Business_Assessment__c/fields/Completed_Financial_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Completed_Financial_Analysis__c</fullName>
    <formula>AND( Metric_Completed_Count__c  &gt; 0,  Indicator_Completed_Count__c &gt; 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completed Financial Analysis</label>
    <type>Checkbox</type>
</CustomField>