force-app/main/default/objects/Business_Assessment__c/fields/Completed_Financial_Analysis_New__c.field-meta.xml
<CustomField>
    <fullName>Completed_Financial_Analysis_New__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-4492 -- Field used for refactored nbac validation</description>
    <label>Completed Financial Analysis</label>
    <type>Checkbox</type>
</CustomField>