force-app/main/default/objects/Business_Assessment__c/fields/Completed_Strategic_Rationale__c.field-meta.xml
<CustomField>
    <fullName>Completed_Strategic_Rationale__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completed Strategic Rationale</label>
    <type>Checkbox</type>
</CustomField>