force-app/main/default/objects/Business_Assessment__c/fields/Completed_Transaction_Counterparties__c.field-meta.xml
<CustomField>
    <fullName>Completed_Transaction_Counterparties__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completed Transaction Counterparties</label>
    <type>Checkbox</type>
</CustomField>