force-app/main/default/objects/Business_Assessment__c/fields/Completed_Transaction_Parties__c.field-meta.xml
<CustomField>
    <fullName>Completed_Transaction_Parties__c</fullName>
    <formula>IF(OR( ISBLANK(Advisor__c), ISBLANK(Mandated_Lead_Arranger__c), ISBLANK(Other_Lenders__c)), false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completed Transaction Parties</label>
    <type>Checkbox</type>
</CustomField>