force-app/main/default/objects/Business_Assessment__c/fields/Completed_Transaction_Profile__c.field-meta.xml
<CustomField>
    <fullName>Completed_Transaction_Profile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completed Transaction Profile</label>
    <type>Checkbox</type>
</CustomField>