force-app/main/default/objects/Business_Assessment__c/fields/Completed_Treasury_and_CapMan__c.field-meta.xml
<CustomField>
    <fullName>Completed_Treasury_and_CapMan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completed Treasury and CapMan</label>
    <type>Checkbox</type>
</CustomField>