force-app/main/default/objects/Business_Assessment__c/fields/Construction_Risk_Grade__c.field-meta.xml
<CustomField>
    <fullName>Construction_Risk_Grade__c</fullName>
    <description>US-3690 Standard Bank Internal Risk Rating for the Economic Group Parent Client from Credit Risk (Source: CRS)</description>
    <inlineHelpText>Standard Bank Internal Risk Rating for the Economic Group Parent Client from Credit Risk</inlineHelpText>
    <label>Construction Risk Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rating</valueSetName>
    </valueSet>
</CustomField>