force-app/main/default/objects/Business_Assessment__c/fields/Credit_Manager__c.field-meta.xml
<CustomField>
    <fullName>Credit_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The field was created mainly for the prupose of email notification US-2441</description>
    <label>Credit Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CreditManagerBusiness_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>