force-app/main/default/objects/Business_Assessment__c/fields/Credit_Paper_Application_Created__c.field-meta.xml
<CustomField>
    <fullName>Credit_Paper_Application_Created__c</fullName>
    <description>Date that the Digital Credit Paper was created SGPRT-1201</description>
    <inlineHelpText>Date that the Digital Credit Paper was created</inlineHelpText>
    <label>Credit Paper Application Created</label>
    <type>DateTime</type>
</CustomField>