force-app/main/default/objects/Business_Assessment__c/fields/Credit_Paper_Approval__c.field-meta.xml
<CustomField>
    <fullName>Credit_Paper_Approval__c</fullName>
    <description>Date that the Digital Credit Paper was approved SGPRT-1201</description>
    <inlineHelpText>Date that the Digital Credit Paper was approved</inlineHelpText>
    <label>Credit Paper Approval</label>
    <type>DateTime</type>
</CustomField>