force-app/main/default/objects/Business_Assessment__c/fields/Credit_Paper_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Credit_Paper_Approved_By__c</fullName>
    <description>The person that approved the Digital Credit Paper SGPRT-1201</description>
    <inlineHelpText>The person that approved the Digital Credit Paper</inlineHelpText>
    <label>Credit Paper Approved By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>