force-app/main/default/objects/Business_Assessment__c/fields/Credit_Paper_Decline_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Paper_Decline_Date__c</fullName>
    <description>Credit Paper Declined Date SGPRT-1201</description>
    <inlineHelpText>Credit Paper Declined Date</inlineHelpText>
    <label>Credit Paper Decline Date</label>
    <type>DateTime</type>
</CustomField>