force-app/main/default/objects/Business_Assessment__c/fields/Credit_Paper_Declined__c.field-meta.xml
<CustomField>
    <fullName>Credit_Paper_Declined__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Digital Credit Paper Decline SGPRT-1201</description>
    <inlineHelpText>Digital Credit Paper Decline</inlineHelpText>
    <label>Credit Paper Declined</label>
    <type>Checkbox</type>
</CustomField>