force-app/main/default/objects/Business_Assessment__c/fields/Credit_Paper_ID__c.field-meta.xml
<CustomField>
    <fullName>Credit_Paper_ID__c</fullName>
    <description>Digital Credit Paper ID SGPRT-1201</description>
    <inlineHelpText>Digital Credit Paper ID</inlineHelpText>
    <label>Credit Paper ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>