force-app/main/default/objects/Business_Assessment__c/fields/Credit_Paper_Sent_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>Credit_Paper_Sent_for_Approval__c</fullName>
    <description>Date that the Digital Credit Paper was sent for approval SGPRT-1201</description>
    <inlineHelpText>Date that the Digital Credit Paper was sent for approval</inlineHelpText>
    <label>Credit Paper Sent for Approval</label>
    <type>DateTime</type>
</CustomField>