force-app/main/default/objects/Business_Assessment__c/fields/Credit_Paper_Sent_for_Approval_By__c.field-meta.xml
<CustomField>
    <fullName>Credit_Paper_Sent_for_Approval_By__c</fullName>
    <description>The person that sent the Digital Credit Paper for approval SGPRT-1201</description>
    <inlineHelpText>The person that sent the Digital Credit Paper for approval</inlineHelpText>
    <label>Credit Paper Sent for Approval By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>