force-app/main/default/objects/Business_Assessment__c/fields/Credit_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Credit_Requirement__c</fullName>
    <description>The difference between the underwrite amount and the Risk agreed hold amount is the amount Credit Risk require to be distributed.</description>
    <formula>Underwrite_Amount__c - Amount_Held__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The difference between the underwrite amount and the Risk agreed hold amount is the amount Credit Risk require to be distributed.</inlineHelpText>
    <label>Credit Requirement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>