force-app/main/default/objects/Business_Assessment__c/fields/Decision_Emphasis__c.field-meta.xml
<CustomField>
    <fullName>Decision_Emphasis__c</fullName>
    <description>Key issues the deal team predict the NBAC discussion will focus around i.e.: client strategy, risk appetite, country of risk issue, client returns, high complexity, counterparty concentration limit, distribution strategy, noting purposes</description>
    <inlineHelpText>Key issues the deal team predict the NBAC discussion will focus around i.e.: client strategy, risk appetite, country of risk issue, client returns, high complexity, counterparty concentration limit, distribution strategy, noting purposes</inlineHelpText>
    <label>Decision Emphasis</label>
    <length>32</length>
    <type>Text</type>
</CustomField>