force-app/main/default/objects/Business_Assessment__c/fields/Delegated_Authority__c.field-meta.xml
<CustomField>
    <fullName>Delegated_Authority__c</fullName>
    <description>Authorised Standard Bank employees who are able approve credit limits according to risk grade and total value being requested. Represented by a DA code.</description>
    <inlineHelpText>Authorised Standard Bank employees who are able approve credit limits according to risk grade and total value being requested. Represented by a DA code.</inlineHelpText>
    <label>Delegated Authority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DA1</fullName>
            </value>
            <value>
                <fullName>DA2</fullName>
            </value>
            <value>
                <fullName>DA3</fullName>
            </value>
            <value>
                <fullName>DA4</fullName>
            </value>
            <value>
                <fullName>DA5</fullName>
            </value>
            <value>
                <fullName>DA6</fullName>
            </value>
            <value>
                <fullName>DA7</fullName>
            </value>
            <value>
                <fullName>DA8</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>