force-app/main/default/objects/Business_Assessment__c/fields/Distribution_Commentary__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Commentary__c</fullName>
    <description>Distribution to complete: any detail necessary to provide a context on the ability to distribute or other key considerations.</description>
    <inlineHelpText>Distribution to complete: any detail necessary to provide a context on the ability to distribute or other key considerations.</inlineHelpText>
    <label>Distribution Commentary</label>
    <length>1200</length>
    <type>LongTextArea</type>
</CustomField>