force-app/main/default/objects/Business_Assessment__c/fields/Distribution_Price__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Price__c</fullName>
    <description>Includes the Distribution breakdown of pricing across facility.</description>
    <inlineHelpText>Includes the Distribution breakdown of pricing across facility.</inlineHelpText>
    <label>Distribution Price</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>